# ROS2_final_Thesis

./: README.md  docker.txt
src/: README.md  cv_basics_ros2_README.md  rplidar_ros2_README.md
src/YOLOv5-ROS/yolov5_ros/: package.xml  setup.py
src/YOLOv5-ROS/yolov5_ros/yolov5_ros/install/: local_setup.sh  setup.ps1  setup.sh
src/YOLOv5-ROS/yolov5_ros/yolov5_ros/log/: latest_build
src/cv_basics/: Calibration_README.md  setup.py
src/cv_basics/cv_basics/: Calibration.py  filtered_scan.py  webcam_pub.py
src/cv_basics/cv_basics/install/: local_setup.sh  setup.sh  setup.zsh
src/cv_basics/cv_basics/log/: latest_build
src/install/: local_setup.sh  setup.bash  setup.sh
src/install/bboxes_ex_msgs/include/bboxes_ex_msgs/msg/: bounding_box.hpp  rosidl_generator_c__visibility_control.h
src/install/bboxes_ex_msgs/share/bboxes_ex_msgs/: local_setup.dsv  local_setup.sh  package.sh
src/install/bboxes_ex_msgs/share/bboxes_ex_msgs/cmake/: bboxes_ex_msgs__rosidl_generator_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
src/install/cv_basics/lib/cv_basics/: filtere_scan  img_publisher  img_subscriber
src/install/cv_basics/share/cv_basics/: package.sh  package.xml
src/install/rplidar_ros/lib/rplidar_ros/: rplidar_composition
src/install/rplidar_ros/share/rplidar_ros/: package.sh
src/install/rplidar_ros/share/rplidar_ros/launch/: filtered_scan.py  (+1 more)
src/install/yolov5_ros/lib/yolov5_ros/: yolov5_ros
src/install/yolov5_ros/share/yolov5_ros/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/log/: latest_build
(+32 files in other folders)
